tests/baselines/reference/importCallExpressionDeclarationEmit3.errors.txt
tests/cases/conformance/dynamicImport/1.ts(3,1): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator


==== tests/cases/conformance/dynamicImport/0.ts (0 errors) ====
    export function foo() { return "foo"; }
    
==== tests/cases/conformance/dynamicImport/1.ts (1 errors) ====
    declare function getPath(): string;
    import * as Zero from "./0";
    import("./0");
    ~~~~~~~~~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
    
    export var p0: Promise<typeof Zero> = import(getPath());
    export var p1: Promise<typeof Zero> = import("./0");
    export var p2: Promise<any> = import("./0");
    